// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BulletText /> should match snapshot for custom bullet text 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_relative__7o6k06fg useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h8 useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y48 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq8"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_flex__7o6k06fq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg useBoxStyles_flexShrink_0__7o6k06h5"
    >
      <span>
        <i
          class="useBoxStyles_display_block__7o6k06fp"
          role="presentation"
        >
          <svg
            class="useBoxStyles_display_block__7o6k06fp useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 7L9 19l-5.5-5.5 1.414-1.414L9 16.172 19.586 5.586 21 7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_flex__7o6k06fq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_flexGrow_1__7o6k06h4"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fp useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ii useTextStyles_fontWeight_normal__w6to7io useTextStyles_sizes_4__w6to7i4"
      >
        Hello World
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for default bullet text 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_relative__7o6k06fg useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h8 useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y48 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq8"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_flex__7o6k06fq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_relative__7o6k06fg useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cx useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_flexShrink_0__7o6k06h5 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06hc BulletText_bullet__1yojba90 BulletText_primary__1yojba91"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ii useTextStyles_fontWeight_normal__w6to7io useTextStyles_sizes_2__w6to7i2 BulletText_primaryText__1yojba93"
      >
        •
      </span>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_flex__7o6k06fq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_flexGrow_1__7o6k06h4"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fp useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ii useTextStyles_fontWeight_normal__w6to7io useTextStyles_sizes_4__w6to7i4"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for ordered bullet text 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_relative__7o6k06fg useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h8 useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y48 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq8"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_flex__7o6k06fq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_relative__7o6k06fg useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cx useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_flexShrink_0__7o6k06h5 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06hc BulletText_bullet__1yojba90 BulletText_primary__1yojba91"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ii useTextStyles_fontWeight_normal__w6to7io useTextStyles_sizes_2__w6to7i2 BulletText_primaryText__1yojba93"
      >
        ?
      </span>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_flex__7o6k06fq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_flexGrow_1__7o6k06h4"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fp useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ii useTextStyles_fontWeight_normal__w6to7io useTextStyles_sizes_4__w6to7i4"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for primary bullet text with custom bullet character 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_relative__7o6k06fg useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h8 useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y48 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq8"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_flex__7o6k06fq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_relative__7o6k06fg useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cx useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_flexShrink_0__7o6k06h5 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06hc BulletText_bullet__1yojba90 BulletText_primary__1yojba91"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ii useTextStyles_fontWeight_normal__w6to7io useTextStyles_sizes_2__w6to7i2 BulletText_primaryText__1yojba93"
      >
        ?
      </span>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_flex__7o6k06fq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_flexGrow_1__7o6k06h4"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fp useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ii useTextStyles_fontWeight_normal__w6to7io useTextStyles_sizes_4__w6to7i4"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for secondary bullet text with custom bullet character 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_relative__7o6k06fg useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h8 useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y48 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq8"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_flex__7o6k06fq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_relative__7o6k06fg useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cx useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_flexShrink_0__7o6k06h5 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06hc BulletText_bullet__1yojba90 BulletText_secondary__1yojba92"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ii useTextStyles_fontWeight_normal__w6to7io useTextStyles_sizes_2__w6to7i2 BulletText_secondaryText__1yojba94"
      >
        ?
      </span>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_flex__7o6k06fq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useBoxStyles_flexWrap_nowrap__7o6k06h7"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_flexGrow_1__7o6k06h4"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fp useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ii useTextStyles_fontWeight_normal__w6to7io useTextStyles_sizes_4__w6to7i4"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;
